[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

[package.metadata.bootimage]
build-command = ["xbuild"]

[build]
target = "aarch64-blog_os.json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[dependencies]
rustboot = "*"




